텍스트 수정

--- a/app/src/main/res/layout/activity_send_location.xml
+++ b/app/src/main/res/layout/activity_send_location.xml
@@ -95,7 +95,7 @@
                 android:layout_marginTop="85dp"
                 android:fontFamily="@font/pretendard_bold"
                 android:includeFontPadding="false"
-                android:text="위치 전송 종료"
+                android:text="위치 전송 중단"
                 android:textColor="#757575"
                 android:textSize="16sp"
                 app:layout_constraintTop_toTopOf="parent"
@@ -109,7 +109,7 @@
                 android:layout_marginBottom="80dp"
                 android:fontFamily="@font/pretendard_regular"
                 android:includeFontPadding="false"
-                android:text="실시간 위치 전송을 시작합니다."
+                android:text="실시간 위치 전송을 중단합니다."
                 android:textColor="#A4A4A4"
                 android:textSize="13sp"
                 app:layout_constraintBottom_toBottomOf="parent"
