--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,9 +11,10 @@
         android:id="@+id/loading_Siheung_Rordmark"
         android:layout_width="164dp"
         android:layout_height="180dp"
-        android:layout_marginTop="136dp"
         android:src="@drawable/loading_siheung_wordmark"
+        app:layout_constraintVertical_bias="0.25"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
@@ -24,8 +25,10 @@
         android:src="@drawable/bus_icon"
         app:layout_constraintBottom_toTopOf="@+id/loading_text_wait"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/loading_text_shuttle"
+        app:layout_constraintVertical_bias="0.8"
         tools:ignore="MissingConstraints" />
 
     <TextView
@@ -49,10 +52,10 @@
         android:text="위치 알리미"
         android:textColor="@color/colorPrimary"
         android:textSize="28sp"
+        android:layout_marginTop="151dp"
         android:layout_marginEnd="22dp"
-        android:layout_marginTop="287dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="@id/loading_Siheung_Rordmark"/>
 
     <TextView
         android:layout_width="wrap_content"
