컴파일 오류

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,6 +38,10 @@
         android:fontFamily="@font/suncheon_b"
         android:includeFontPadding="false"
         android:text="셔틀 "
+        android:shadowColor="#cccccc"
+        android:shadowDx="2"
+        android:shadowDy="4"
+        android:shadowRadius="10"
         android:textColor="@color/colorAccent"
         android:textSize="28dp"
         app:layout_constraintEnd_toStartOf="@+id/main_text_location"
@@ -50,6 +54,10 @@
         android:fontFamily="@font/suncheon_b"
         android:includeFontPadding="false"
         android:text="위치 알리미"
+        android:shadowColor="#cccccc"
+        android:shadowDx="2"
+        android:shadowDy="4"
+        android:shadowRadius="10"
         android:textColor="@color/colorPrimary"
         android:textSize="28sp"
         android:layout_marginTop="151dp"
