오류 수정, SettingActivity 추가
<FIN>
multidex 설정 추가로 앱 실행 안되는 오류 수정
디자인 수정
- 버튼 디자인, 동작 추가
SettingActivity 추가

--- a/app/src/main/res/layout/activity_send_location.xml
+++ b/app/src/main/res/layout/activity_send_location.xml
@@ -119,6 +119,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
+        android:id="@+id/sendLocation_btn_toSetting"
         android:layout_width="62dp"
         android:layout_height="62dp"
         android:layout_marginBottom="19dp"
