셔틀 이름 변경, 안내문구 수정

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,6 +72,10 @@
         android:layout_marginTop="16dp"
         android:includeFontPadding="false"
         android:text="운전자용"
+        android:shadowColor="#cccccc"
+        android:shadowDx="2"
+        android:shadowDy="4"
+        android:shadowRadius="10"
         android:textColor="@color/colorAccent"
         android:textSize="22sp"
         app:layout_constraintTop_toBottomOf="@id/main_text_location"
